--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,14 @@
                 <li><a class="link" href="#">Контакты</a>
                 </li>
             </ul>
-        </nav>
-        <div>
-        <a class="link-grey" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-        <a class="link-grey" href="tel:+380961111111">+380961111111</a>
-        </div>
+            <ul class="contacts">
+                <li class="item">
+            <a class="link-grey" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+        </li>
+        <li class="item">
+            <a class="link-grey" href="tel:+380961111111">+380961111111</a>
+            </li>
+            </ul>
 </header>
 
 <main>
