--- a/index.html
+++ b/index.html
@@ -46,55 +46,55 @@
              <button class="button" type="button">Заказать услугу</button> 
       </section>  
 </div>
-<section>
-    <h2>Наши преимущества</h2>
-    <ul>
-        <li>
+<section class="middle-section">
+    <h2 class="hide-text">Наши преимущества</h2>
+    <ul class="middle-list">
+        <li class="item">
             <h3 class="text-list">Внимание к деталям</h3>
             <p class="grey-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
-        <li>
+        <li class="item">
             <h3 class="text-list">Пунктуальность</h3>
             <p class="grey-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li>
+        <li class="item">
             <h3 class="text-list">Планирование</h3>
             <p class="grey-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li>
+        <li class="item">
             <h3 class="text-list">Современные технологии</h3>
             <p class="grey-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
     </ul>
 </section>
-<section>
+<section class="what-we-do">
     <h2 class="h2-description">Чем мы занимаемся</h2>
-    <ul>
-        <li><img src="images/box1.jpg" alt="набор текста" width="370"></li>
-        <li><img src="images/box2.jpg" alt="передача данных" width="370"></li>
-        <li><img src="images/box3.jpg" alt="дизаин" width="370"></li>
+    <ul class="what-we-do-list">
+        <li class="item"><img src="images/box1.jpg" alt="набор текста" width="370"></li>
+        <li class="item"><img src="images/box2.jpg" alt="передача данных" width="370"></li>
+        <li class="item"><img src="images/box3.jpg" alt="дизаин" width="370"></li>
     </ul>
 </section>
 
 <section class="our-team">
     <h2 class="h2-description">Наша команда</h2>
- <ul>
-    <li>
+ <ul class="last-list">
+    <li class="item">
     <img src="images/img1.jpg" alt="Игорь Демяненко" width="270">
         <h3 class="worker-name">Игорь Демьяненко</h3>
         <p class="grey-prof">Product Designer</p>
     </li>
-     <li>
+     <li class="item">
      <img src="images/img2.jpg" alt="Ольга Репина" width="270">
         <h3 class="worker-name">Ольга Репина</h3>
         <p class="grey-prof">Frontend Developer</p>
     </li>
-    <li>
+    <li class="item">
     <img src="images/img3.jpg" alt="Николай Тарасов" width="270">
         <h3 class="worker-name">Николай Тарасов</h3>
         <p class="grey-prof">Marketing</p>
     </li>
-    <li>
+    <li class="item">
     <img src="images/img4.jpg" alt="Михаил Ермаков" width="270">
         <h3 class="worker-name">Михаил Ермаков</h3>
         <p class="grey-prof">UI Designer</p>
@@ -104,9 +104,9 @@
 </main>
 
 <footer class="footer">
-    <a class="logo" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
+    <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
-    <ul>
+    <ul class="footer-list">
         <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
         <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="tele" href="tel:+380991111111">+380991111111</a></li>
