--- a/portfolio.html
+++ b/portfolio.html
@@ -11,15 +11,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="header">
+<header class="header-portfolio">
+    <nav class="container main-nav">
     <a class="logo" href="index.html"> <span class="logo-blue">Web</span>Studio</a>
-           <nav>
-            <ul>
-                <li><a class="link" href="index.html">Студия</a>
+           
+            <ul class="list">
+                <li class="item"><a class="link" href="index.html">Студия</a>
                 </li>
-                <li><a class="link link-active" href="portfolio.html">Портфолио</a>
+                <li class="item"><a class="link link-active" href="portfolio.html">Портфолио</a>
                 </li>
-                <li><a class="link" href="#">Контакты</a>
+                <li class="item"><a class="link" href="#">Контакты</a>
                 </li>
             </ul>
             <ul class="contacts">
@@ -33,75 +34,77 @@
 </header>
 
 <main>
- <section>
-        <ul>
-            <li><button class="btn-port-active" type="button">Все</button>
+ <section class="main-section">
+        <ul class="btn-list">
+            <li class="padding-item"><button class="btn-port-active" type="button">Все</button>
             </li>
-            <li><button class="btn-port" type="button">Веб-сайты</button>
+            <li class="padding-item"><button class="btn-port" type="button">Веб-сайты</button>
             </li>
-            <li><button class="btn-port" type="button">Приложения</button>
+            <li class="padding-item"><button class="btn-port" type="button">Приложения</button>
             </li>
-            <li><button class="btn-port" type="button">Дизайн</button>
+            <li class="padding-item"><button class="btn-port" type="button">Дизайн</button>
             </li>
-            <li><button class="btn-port" type="button">Маркетинг</button>
+            <li class="padding-item"><button class="btn-port" type="button">Маркетинг</button>
             </li>
         </ul>
 
         <!--Список однотипных элементов, фото с текстом-->
-        <ul>
-            <li>
+        <div class="flex-container">
+        <ul class="flex-list">
+            <li class="flex-item">
                 <a href="#"><img src="images/project1.jpg" alt="Технокряк" width="370"></a>
                 <h2 class="poster-name">Технокряк</h2>
                 <p class="poster-desc">Веб-сайт</p>
                 </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project2.jpg" alt="Баскетбол" width="370"></a>
                  <h2 class="poster-name">Постер New Orlean vs Golden Star</h2>
                  <p class="poster-desc">Дизайн</p>
             </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project3.jpg" alt="Ресторан" width="370"></a>
                 <h2 class="poster-name">Ресторан Seafood</h2>
                 <p class="poster-desc">Приложение</p>
             </li>
-            <li>
+            <li class='flex-item'>
                 <a href="#"><img src="images/project4.jpg" alt="Прайм" width="370"></a>
                 <h2 class="poster-name">Проект Prime</h2>
                 <p clas="poster-desc">Маркетинг</p>
             </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project5.jpg" alt="Ящики" width="370"></a>
                 <h2 class="poster-name">Проект Boxes</h2>
                 <p class="poster-desc">Приложение</p>
             </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project6.jpg" alt="Вдохновление" width="370"></a>
                 <h2 class="poster-name">Inspiration has no Borders</h2>
                 <p class="poster-desc">Веб-сфйт</p>
             </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project7.jpg" alt="Издание" width="370"></a>
                 <h2 class="poster-name">Издание Limited Edition</h2>
                 <p class="poster-desc">Дизайн</p>
             </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project8.jpg" alt="Проект" width="370"></a>
                 <h2 class="poster-name">Проект LAB</h2>
                 <p class="poster-desc">Маркетинг</p>
             </li>
-            <li>
+            <li class="flex-item">
                 <a href="#"><img src="images/project9.jpg" alt="Бизнес" width="370"></a>
                 <h2 class="poster-name">Growing Business</h2>
             </li>
 
         </ul>
+        </div>
     </section>
 </main>
 
 <footer class="footer">
     <a class="logo" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
-    <ul>
+    <ul class="footer-list">
         <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
         <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="tele" href="tel:+380991111111">+380991111111</a></li>
