--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
             <a class="link-grey" href="tel:+380961111111">+380961111111</a>
             </li>
             </ul>
+        </nav>
 </header>
 
 <main>
@@ -53,47 +54,65 @@
         <ul class="flex-list">
             <li class="flex-item">
                 <a href="#"><img src="images/project1.jpg" alt="Технокряк" width="370"></a>
+                <div class="img-text">
                 <h2 class="poster-name">Технокряк</h2>
                 <p class="poster-desc">Веб-сайт</p>
+              </div>
                 </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project2.jpg" alt="Баскетбол" width="370"></a>
-                 <h2 class="poster-name">Постер New Orlean vs Golden Star</h2>
+                 <div class="img-text">
+                <h2 class="poster-name">Постер New Orlean vs Golden Star</h2>
                  <p class="poster-desc">Дизайн</p>
+                </div> 
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project3.jpg" alt="Ресторан" width="370"></a>
+                <div class="img-text">
                 <h2 class="poster-name">Ресторан Seafood</h2>
                 <p class="poster-desc">Приложение</p>
+            </div>
             </li>
-            <li class='flex-item'>
+            <li class="flex-item">
                 <a href="#"><img src="images/project4.jpg" alt="Прайм" width="370"></a>
+               <div class="img-text">
                 <h2 class="poster-name">Проект Prime</h2>
                 <p clas="poster-desc">Маркетинг</p>
+                </div>
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project5.jpg" alt="Ящики" width="370"></a>
+                <div class="img-text">
                 <h2 class="poster-name">Проект Boxes</h2>
                 <p class="poster-desc">Приложение</p>
+                </div>
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project6.jpg" alt="Вдохновление" width="370"></a>
+                <div class="img-text">
                 <h2 class="poster-name">Inspiration has no Borders</h2>
                 <p class="poster-desc">Веб-сфйт</p>
+                </div>
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project7.jpg" alt="Издание" width="370"></a>
+                <div class="img-text">
                 <h2 class="poster-name">Издание Limited Edition</h2>
                 <p class="poster-desc">Дизайн</p>
+                </div>
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project8.jpg" alt="Проект" width="370"></a>
+                <div class="img-text">
                 <h2 class="poster-name">Проект LAB</h2>
                 <p class="poster-desc">Маркетинг</p>
+            </div>
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project9.jpg" alt="Бизнес" width="370"></a>
+                <div class="img-item">
                 <h2 class="poster-name">Growing Business</h2>
+            </div>
             </li>
 
         </ul>
