--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <header class="header-portfolio">
+    <div class="header-port">
     <nav class="container main-nav">
     <a class="logo" href="index.html"> <span class="logo-blue">Web</span>Studio</a>
            
@@ -32,6 +33,7 @@
             </li>
             </ul>
         </nav>
+    </div>
 </header>
 
 <main>
