--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
             </section>  
 <section class="section">
-    <div class="container middle-section">
+    <div class="container midd-section">
     <h2 class="hide-text">Наши преимущества</h2>
     <ul class="middle-list">
         <li class="item">
@@ -70,17 +70,20 @@
     </ul>
     </div>
 </section>
-<section class="what-we-do">
-    <h2 class="h2-description">Чем мы занимаемся</h2>
+<section class="middle-section">
+   <h2 class="section-description">Чем мы занимаемся</h2>
+   <div class=what-we-do-container">
     <ul class="what-we-do-list">
         <li class="item"><img src="images/box1.jpg" alt="набор текста" width="370"></li>
         <li class="item"><img src="images/box2.jpg" alt="передача данных" width="370"></li>
         <li class="item"><img src="images/box3.jpg" alt="дизаин" width="370"></li>
     </ul>
+    </div>
 </section>
 
-<section class="our-team">
-    <h2 class="h2-description">Наша команда</h2>
+<section class="our-team-section">
+    <h2 class="section-description">Наша команда</h2>
+    <div class="our-team-container">
  <ul class="last-list">
     <li class="item">
     <img src="images/img1.jpg" alt="Игорь Демяненко" width="270">
@@ -103,18 +106,22 @@
         <p class="grey-prof">UI Designer</p>
     </li>
 </ul>
+</div>
 </section>
 </main>
 
 <footer class="footer">
+    <div class="footer-div">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
-    <ul class="footer-list">
+        <ul class="footer-list">
         <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
         <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="tele" href="tel:+380991111111">+380991111111</a></li>
     </ul>
     </address>
+    
+    </div>
 
 </footer>
     
