--- a/index.html
+++ b/index.html
@@ -82,28 +82,36 @@
 </section>
 
 <section class="our-team-section">
-    <h2 class="section-description">Наша команда</h2>
-    <div class="our-team-container">
- <ul class="last-list">
-    <li class="item">
+    <div class="container">
+   <h2 class="section-description">Наша команда</h2>
+   <ul class="last-list">
+    <li class="our-team-item team-content-list">
     <img src="images/img1.jpg" alt="Игорь Демяненко" width="270">
+    <div class="our-team-box">
         <h3 class="worker-name">Игорь Демьяненко</h3>
         <p class="grey-prof">Product Designer</p>
+        </div>
     </li>
-     <li class="item">
+     <li class="our-team-item team-content-list">
      <img src="images/img2.jpg" alt="Ольга Репина" width="270">
+     <div class="our-team-box">
         <h3 class="worker-name">Ольга Репина</h3>
         <p class="grey-prof">Frontend Developer</p>
+        </div>
     </li>
-    <li class="item">
+    <li class="our-team-item team-content-list">
     <img src="images/img3.jpg" alt="Николай Тарасов" width="270">
+    <div class="our-team-box"> 
         <h3 class="worker-name">Николай Тарасов</h3>
         <p class="grey-prof">Marketing</p>
+        </div>
     </li>
-    <li class="item">
+    <li class="our-team-item team-content-list">
     <img src="images/img4.jpg" alt="Михаил Ермаков" width="270">
+    <div class="our-team-box">
         <h3 class="worker-name">Михаил Ермаков</h3>
         <p class="grey-prof">UI Designer</p>
+        </div>
     </li>
 </ul>
 </div>
