--- a/portfolio.html
+++ b/portfolio.html
@@ -130,15 +130,18 @@
 </main>
 
 <footer class="footer">
-    <a class="logo" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
+    <div class="footer-div">
+    <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
-    <ul class="footer-list">
+        <ul class="footer-list">
         <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
         <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
         <li><a class="tele" href="tel:+380991111111">+380991111111</a></li>
     </ul>
     </address>
-</footer>
     
+    </div>
+
+</footer>
 </body>
 </html>
