--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header class="header">
         <div class="container header-port">
+            <a class="logo logo-container" href="index.html"><span class="logo-blue">Web</span>Studio</a>
             <nav class="main-nav">   
-        <a class="logo logo-container" href="index.html"><span class="logo-blue">Web</span>Studio</a>
         <ul class="list-container">
                 <li class="header-item"><a class="link link-active" href="index.html">Студия</a>
                 </li>
@@ -40,15 +40,16 @@
      <main> 
 
     <section class="hero">
-          <div class="hero-box">
+          <div class="container">
               
         <h1 class="hero-text hero-text-section">Эффективные решения<br>для вашего бизнеса</h1>
              <button type="button" class="button button-section">Заказать услугу</button>
           
           </div>
-            </section>  
-<section class="section">
-    <div class="container midd-section">
+            </section> 
+
+<section class="section-advantages">
+    <div class="container">
     <h2 class="hide-text">Наши преимущества</h2>
     <ul class="middle-list">
         <li class="item">
@@ -72,7 +73,7 @@
 </section>
 <section class="middle-section">
    <h2 class="section-description">Чем мы занимаемся</h2>
-   <div class=what-we-do-container">
+   <div class="container">
     <ul class="what-we-do-list">
         <li class="item"><img src="images/box1.jpg" alt="набор текста" width="370"></li>
         <li class="item"><img src="images/box2.jpg" alt="передача данных" width="370"></li>
@@ -119,7 +120,7 @@
 </main>
 
 <footer class="footer">
-    <div class="footer-div">
+    <div class="container">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
         <ul class="footer-list">
