--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         </ul>
 
         <!--Список однотипных элементов, фото с текстом-->
-        
+    <section class="poster-section">
     <ul class="flex-list">
             <li class="flex-item">
                 <a href="#"><img src="images/project1.jpg" alt="Технокряк" width="370"></a>
@@ -117,7 +117,7 @@
             </li>
             <li class="flex-item">
                 <a href="#"><img src="images/project9.jpg" alt="Бизнес" width="370"></a>
-                <div class="img-item">
+                <div class="img-text">
                 <h3 class="poster-name">Growing Business</h3>
                 <p class="poster-desc">Приложение</p>
             </div>
@@ -130,7 +130,7 @@
 </main>
 
 <footer class="footer">
-    <div class="footer-div">
+    <div class="container">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
         <ul class="footer-list">
@@ -141,6 +141,7 @@
     </address>
     
     </div>
+
 
 </footer>
 </body>
