--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
     </div>
 </section>
 <section class="middle-section">
+    <div class="container">
    <h2 class="section-description">Чем мы занимаемся</h2>
-   <div class="container">
+   
     <ul class="what-we-do-list">
         <li class="item"><img src="images/box1.jpg" alt="набор текста" width="370"></li>
         <li class="item"><img src="images/box2.jpg" alt="передача данных" width="370"></li>
@@ -122,7 +123,7 @@
 <footer class="footer">
     <div class="container">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
-    <address>
+    <address class="address li">
         <ul class="footer-list">
         <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
         <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
