--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,14 @@
 <body>
     <header class="header">
         <div class="container header-port">
-        <a class="logo" href="index.html"><span class="logo-blue">Web</span>Studio</a>
-        <nav class="main-nav">
-            <ul class="list-container">
-                <li class="item"><a class="link" href="index.html">Студия</a>
+            <a class="logo logo-container" href="index.html"><span class="logo-blue">Web</span>Studio</a>
+            <nav class="main-nav">   
+        <ul class="list-container">
+                <li class="header-item"><a class="link link-active" href="index.html">Студия</a>
                 </li>
-                <li class="item"><a class="link link-active" href="portfolio.html">Портфолио</a>
+                <li class="header-item"><a class="link" href="portfolio.html">Портфолио</a>
                 </li>
-                <li class="item"><a class="link" href="#">Контакты</a>
+                <li class="header-item"><a class="link" href="#">Контакты</a>
                 </li>
             </ul>
             </nav>
