--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
             <a class="logo logo-container" href="index.html"><span class="logo-blue">Web</span>Studio</a>
             <nav class="main-nav">   
         <ul class="list-container">
-                <li class="header-item"><a class="link link-active" href="index.html">Студия</a>
+                <li class="header-item"><a class="link" href="index.html">Студия</a>
                 </li>
-                <li class="header-item"><a class="link" href="portfolio.html">Портфолио</a>
+                <li class="header-item"><a class="link link-active" href="portfolio.html">Портфолио</a>
                 </li>
                 <li class="header-item"><a class="link" href="#">Контакты</a>
                 </li>
@@ -133,15 +133,14 @@
     <div class="container">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
+        <a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a>
         <ul class="footer-list">
-        <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
-        <li><a class="tele" href="tel:+380991111111">+380991111111</a></li>
+        <li class="footer-item-list"><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
+        <li class="footer-item-list"><a class="tele" href="tel:+380991111111">+380991111111</a></li>
     </ul>
     </address>
     
     </div>
-
 
 </footer>
 </body>
