--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 <footer class="footer">
     <div class="container">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
-    <address class="address li">
+    <address>
+        <a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a>
         <ul class="footer-list">
-        <li><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
-        <li><a class="tele" href="tel:+380991111111">+380991111111</a></li>
+        <li class="footer-item-list"><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
+        <li class="footer-item-list"><a class="tele" href="tel:+380991111111">+380991111111</a></li>
     </ul>
     </address>
     
