--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href=https://cdnjs.com/libraries/modern-normalize> 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -16,9 +22,10 @@
 <body>
     <header class="header">
         <div class="container header-port">
+            <nav class="main-nav"> 
             <a class="logo logo-container" href="index.html"><span class="logo-blue">Web</span>Studio</a>
-            <nav class="main-nav">   
-        <ul class="list-container">
+           
+        <ul class="list-row">
                 <li class="header-item"><a class="link" href="index.html">Студия</a>
                 </li>
                 <li class="header-item"><a class="link link-active" href="portfolio.html">Портфолио</a>
@@ -84,7 +91,7 @@
                 <a href="#"><img src="images/project4.jpg" alt="Прайм" width="370"></a>
                <div class="img-text">
                 <h3 class="poster-name">Проект Prime</h3>
-                <p clas="poster-desc">Маркетинг</p>
+                <p class="poster-desc">Маркетинг</p>
                 </div>
             </li>
             <li class="flex-item">
@@ -130,18 +137,19 @@
 </main>
 
 <footer class="footer">
+    <section class="footer-section">
     <div class="container">
     <a class="logo-footer" href="index.html"><span class="logo-blue">Web</span><span class="studio">Studio</span></a>
     <address>
-        <a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a>
         <ul class="footer-list">
+        <li class="footer-item-list"><a class="address" target="_blank" href="https://goo.gl/maps/M211C4r4D3SkxWqD8">г.Киев, пр-т Леси Украинки, 26</a>
         <li class="footer-item-list"><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
         <li class="footer-item-list"><a class="tele" href="tel:+380991111111">+380991111111</a></li>
     </ul>
     </address>
     
     </div>
-
+</section>
 </footer>
 </body>
 </html>
